* update transactions api * added jackson config with JsonNullableModule * using useOptional as false in the spec
