# api/src/main/java/dev/thiagooliveira/bankhub/domain/dto/projection/TransactionEnriched.java
@@ -8,12 +8,14 @@ import java.util.UUID;
 
 public record TransactionEnriched(
     UUID id,
+    UUID accountId,
     OffsetDateTime dateTime,
     String description,
     CategoryEnriched category,
     BigDecimal amount) {
   public TransactionEnriched(
       UUID id,
+      UUID accountId,
       Timestamp dateTime,
       String description,
       UUID categoryId,
@@ -22,6 +24,7 @@ public record TransactionEnriched(
       BigDecimal amount) {
     this(
         id,
+        accountId,
         dateTime.toInstant().atZone(ZoneId.of("Europe/Lisbon")).toOffsetDateTime(),
         description,
         new CategoryEnriched(categoryId, categoryName, categoryType),
