# api/src/main/java/dev/thiagooliveira/bankhub/infra/http/mapper/AccountMapper.java
@@ -3,6 +3,7 @@ package dev.thiagooliveira.bankhub.infra.http.mapper;
 import dev.thiagooliveira.bankhub.domain.dto.CreateAccountInput;
 import dev.thiagooliveira.bankhub.domain.dto.projection.AccountEnriched;
 import dev.thiagooliveira.bankhub.domain.model.Account;
+import dev.thiagooliveira.bankhub.domain.model.Currency;
 import dev.thiagooliveira.bankhub.spec.http.dto.GetAccountResponseBody;
 import dev.thiagooliveira.bankhub.spec.http.dto.GetAccountsResponseBody;
 import dev.thiagooliveira.bankhub.spec.http.dto.PostAccountRequestBody;
@@ -17,4 +18,8 @@ public interface AccountMapper {
   GetAccountResponseBody map(AccountEnriched account);
 
   CreateAccountInput map(UUID organizationId, PostAccountRequestBody postAccountRequestBody);
+
+  default Currency map(String currency) {
+    return Currency.valueOf(currency);
+  }
 }
